# fly-service

./: Cargo.toml  diesel.toml
.github/: copilot-instructions.md
migrations/2025-11-05-161310_create_users_table/: up.sql
migrations/2025-11-05-191438_create_files_table/: down.sql  up.sql
src/: file_store.rs  main.rs  schema.rs  swagger.rs
src/auth/: dto.rs  jwt_auth.rs  mod.rs  service.rs
src/files/: dto.rs  mod.rs  service.rs
src/folders/: dto.rs  mod.rs  service.rs
src/shared/: common.rs  dto.rs  mod.rs
