[package]
name = "task_now_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11"
# actix-files = "0.6.8"
actix-rt = "2.11.0"
actix-cors = "0.7.1"
# actix-ws = "0.3.0"
actix = "0.13.5"
# actix-broker = "0.4"
# actix-web-actors = "4.3"

# futures-util = { version="0.3.31", features = ["sink"] }
diesel = { version = "2.3.3", features = ["sqlite", "r2d2", "chrono", "uuid"] }
diesel_migrations = "2.3.0"
dotenv = "0.15"
env_logger = "0.10.0"
log = "0.4"
derive_more = "2.0.1"
jsonwebtoken = "7.2.0"
argon2 = "0.5.3"
rand_core = {version = "0.6.3", features = ["std"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
utoipa = {version = "5.4.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }